# RIO

./: .gitignore  Dockerfile  README.md  azure-pipelines.yml  entrypoint.sh  package.xml  setup.py
camera-lidar/: README.md
camera-lidar/frame_publisher/: CMakeLists.txt  package.xml
camera-lidar/frame_publisher/src/: publisher.cpp
camera-lidar/frame_transformer/: CMakeLists.txt  package.xml
camera-lidar/frame_transformer/nodes/: body2sensor_broadcaster.py  ned2body_broadcaster.py  transform_listener.py
camera-lidar/lidar_processing/: CMakeLists.txt  package.xml
camera-lidar/lidar_processing/include/lidar_processing/: dbscan.hpp  landmap.h  utils.hpp
camera-lidar/lidar_processing/src/: LandAreas.csv  dbscan.cpp  landArea.csv  landmap.cpp  lidar_clustering.cpp  polygon_plotter.py
camera-lidar/object_detection/: CMakeLists.txt  package.xml
camera-lidar/object_detection/launch/: processing.launch
camera-lidar/object_detection/src/: image_processing.py  test.py
camera-lidar/realtime_validation/: CMakeLists.txt  package.xml
camera-lidar/realtime_validation/launch/: validator.launch
camera-lidar/realtime_validation/src/: realtime_validator.py
config/: parameters.yaml  revolt_ekf.yaml
darknet_ros/darknet/src/: image.c
darknet_ros/darknet_ros/config/: ros.yaml
darknet_ros/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
darknet_ros/darknet_ros/launch/: darknet_ros.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp  yolo_object_detector_node.cpp
darknet_ros/darknet_ros/test/: object_detection.test  revolt.yaml
darknet_ros/darknet_ros/yolo_network_config/cfg/: revolt.cfg
data_stream/tcp_datatransceiver/: CMakeLists.txt  README.md  package.xml
data_stream/tcp_datatransceiver/include/tcp_datatransceiver/: TCPDatatransceiver.h
data_stream/tcp_datatransceiver/src/: TCPDatatransceiver.cpp
data_stream/udp_receiver/: CMakeLists.txt  README.md  package.xml
data_stream/udp_receiver/include/udp_receiver/: UDP_receiver.h  vdm_parse.h
data_stream/udp_receiver/src/: PracticalSocket.cpp  UDP_receiver.cpp  nmea.cpp  sixbit.cpp  vdm_parse.cpp
data_stream/udp_video_stream/: CMakeLists.txt  README.md  package.xml
dev/: Dockerfile.dev  docker-compose.yml
gemini/linux/: docker-compose.yml
landmap_lib/: CMakeLists.txt  package.xml
landmap_lib/include/landmap_lib/: landmap.h
landmap_lib/maps/: landArea.csv
landmap_lib/src/: landmap.cpp  polygon_plotter.py
launch/: revolt_state_estimator.launch.py  state_estimator.launch.py
radar_processing/: CMakeLists.txt  package.xml
radar_processing/include/radar_processing/: RadarPointsToClusters.hpp  RadarSpokesToPoints.hpp  nanoflann.hpp
radar_processing/launch/: radar_processing.launch
radar_processing/src/: RadarPointsToClusters.cpp  RadarSpokesToPoints.cpp  landmap.cpp  tempNodes.csv
revolt_state_estimator/: CMakeLists.txt  README.md  es_ekf.py  package.xml  revolt_es_ekf_node.py  setup.cfg  setup.py  utils.py  verify_H.py
revolt_state_estimator/config/: ekf.yaml  internal_sensors_static_tf.yaml  navsat_transform.yaml  revolt_ekf.yaml  revolt_es_ekf.yaml  revolt_model.yaml
revolt_state_estimator/install/: local_setup.sh  setup.sh
revolt_state_estimator/install/revolt_state_estimator/lib/revolt_state_estimator/: revolt_ekf
revolt_state_estimator/install/revolt_state_estimator/share/revolt_state_estimator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
revolt_state_estimator/install/revolt_state_estimator/share/revolt_state_estimator/config/: revolt_ekf.yaml
revolt_state_estimator/install/revolt_state_estimator/share/revolt_state_estimator/launch/: revolt_state_estimator.launch.py
revolt_state_estimator/launch/: revolt_state_estimator.launch.py
revolt_state_estimator/log/: latest_build
revolt_state_estimator/revolt_state_estimator/: ekf.py  es_ekf.py  revolt_ekf.py  revolt_ekf_node.py  revolt_es_ekf_node.py  revolt_model.py  revolt_sensor_transforms.py  utils.py
revolt_state_estimator/state_estimate_tuning/: README.md  plot_all_yaws.py  plot_estimates.py  plot_fix.py  plot_head.py  plot_imu.py  plot_imu_dv.py  plot_vel.py
revolt_state_estimator/state_estimate_tuning/data/: ekf_state_estimate_revolt.csv  ekf_state_estimate_revolt_no_movement.csv  fix.csv  heading.csv  imu_dv.csv  vel.csv
revolt_tracking/: CMakeLists.txt  README.md  package.xml  setup.py
revolt_tracking/autoseapy_tracking/: conversion.py  definitions.py  track_initiation.py  track_management.py  tracking.py  tracking_common.py
revolt_tracking/scripts/: lidar_camera_tracker.py  tracker.py  visualize_tracks.py
sensor_fusion_launch/: CMakeLists.txt  README.md  package.xml  sensor_fusion.launch  setup.py
sensor_fusion_launch/config/: communication.yaml  gnc.yaml  hardware.yaml  ned_frames.yaml  topics.yaml  tracking.yaml  world.yaml
sensor_fusion_launch/launch/: darknet.launch  sensor_fusion.launch.py  tracking-sim.launch  tracking.launch
sensor_fusion_launch/launch/tracking/deprecated/: calibration-verification.launch  frame_publisher.launch  frame_publisher_lidar_processing.launch  plotting.launch  tracking_lidar.launch  tracking_sensor_fusion.launch  tracking_unknown_purpose.launch  yolo.launch
state_estimate_tuning/: revolt_es_ekf_debugger_node.py  state_estimator_debugger_node.py
state_estimator/: eskf.py  state_estimator_node.py  verify_H.py
