<?xml version="1.0"?>
<package format="2">
  <name>landmap_lib</name>
  <version>0.0.0</version>
  <description>The landmap_lib package</description>

  <maintainer email="root@todo.todo">root</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <exec_depend>roscpp</exec_depend>


  <export>

  </export>
</package>
