<?xml version="1.0"?>
<package format="2">
  <name>revolt_tracking</name>
  <version>0.1.0</version>
  <description>The revolt_tracking package</description>
  <maintainer email="revolt@todo.todo">revolt</maintainer>
  <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <build_depend>autosea_msgs</build_depend>
    <exec_depend>autosea_msgs</exec_depend>
    <build_depend>nmea_msgs</build_depend>
    <exec_depend>nmea_msgs</exec_depend>
    <build_depend>cmake_modules</build_depend>
    <exec_depend>cmake_modules</exec_depend>
    <exec_depend>laser_geometry</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <build_depend>laser_geometry</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>



  <export>

  </export>
</package>
