<?xml version="1.0"?>
<package format="2">
  <name>tcp_datatransceiver</name>
  <version>0.0.0</version>
  <description>The tcp_datatransceiver package</description>
  <maintainer email="portfence@something.something">portfence</maintainer>
  <license>SOMETHING</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
